@@ -3909,8 +3909,6 @@ sub handle_tests_dejagnu
 {
     push (@check_tests, 'check-DEJAGNU');
 
-    $output_rules .= &file_contents ('dejagnu');
-
     # In Cygnus mode, these are found in the build tree.
     # Otherwise they are looked for in $PATH.
     &define_program_variable ('EXPECT', 'build', 'expect', 'expect');
@@ -3918,49 +3916,13 @@ sub handle_tests_dejagnu
 
     # Only create site.exp rule if user hasn't already written
     # one.
-    if (! &target_defined ('site.exp'))
-    {
-        # Note that in the rule we don't directly generate
-        # site.exp to avoid the possibility of a corrupted
-        # site.exp if make is interrupted.  Jim Meyering has some
-        # useful text on this topic.
-        $output_rules .= ("site.exp: Makefile\n"
-                          . "\t\@echo 'Making a new site.exp file...'\n"
-                          . "\t\@test ! -f site.bak || rm -f site.bak\n"
-                          . "\t\@echo '## these variables are automatically generated by make ##' > \$\@-t\n"
-                          . "\t\@echo '# Do not edit here.  If you wish to override these values' >> \$\@-t\n"
-                          . "\t\@echo '# edit the last section' >> \$\@-t\n"
-                          . "\t\@echo 'set tool \$(DEJATOOL)' >> \$\@-t\n"
-                          . "\t\@echo 'set srcdir \$(srcdir)' >> \$\@-t\n"
-                          . "\t\@echo 'set objdir' \`pwd\` >> \$\@-t\n");
-
-        # Extra stuff for AC_CANONICAL_*
-        local (@whatlist) = ();
-        if ($seen_canonical)
-        {
-            push (@whatlist, 'host');
-        }
-
-        # Extra stuff only for AC_CANONICAL_SYSTEM.
-        if ($seen_canonical == $AC_CANONICAL_SYSTEM)
-        {
-            push (@whatlist, 'target', 'build');
-        }
-
-        local ($c1, $c2);
-        foreach $c1 (@whatlist)
-        {
-            foreach $c2 ('alias', 'triplet')
-            {
-                $output_rules .= "\t\@echo 'set ${c1}_${c2} \$(${c1}_${c2})' >> \$\@-t\n";
-            }
-        }
-
-        $output_rules .= ("\t\@echo '## All variables above are generated by configure. Do Not Edit ##' >> \$\@-t\n"
-                          . "\t\@test ! -f site.exp || sed '1,/^## All variables above are.*##/ d' site.exp >> \$\@-t\n"
-                          . "\t\@test ! -f site.exp || mv site.exp site.bak\n"
-                          . "\t\@mv \$\@-t site.exp\n");
-    }
+    $output_rules .=
+      &file_contents ('dejagnu',
+		      &transform_cond
+		      ('SITE-EXP' => ! &target_defined ('site.exp'),
+		       'BUILD'    => $seen_canonical == $AC_CANONICAL_SYSTEM,
+		       'HOST'     => $seen_canonical,
+		       'TARGET'   => $seen_canonical == $AC_CANONICAL_SYSTEM));
 }
 
 
