@@ -1,5 +1,5 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright 1994, 1995, 1996, 1997, 2000 Free Software Foundation, Inc.
+## Copyright 1994, 1995, 1996, 1997, 2000, 2001 Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -45,3 +45,32 @@ check-DEJAGNU: site.exp
 	  done; \
 	else echo "WARNING: could not find \`runtest'" 1>&2; :;\
 	fi
+
+
+## ------------------- ##
+## Building site.exp.  ##
+## ------------------- ##
+
+## Note that in the rule we don't directly generate site.exp to avoid
+## the possibility of a corrupted site.exp if make is interrupted.
+## Jim Meyering has some useful text on this topic.
+?SITE-EXP?site.exp: Makefile
+?SITE-EXP?	  @echo 'Making a new site.exp file...'
+?SITE-EXP?	  @echo '## these variables are automatically generated by make ##' >site.tmp
+?SITE-EXP?	  @echo '# Do not edit here.  If you wish to override these values' >>site.tmp
+?SITE-EXP?	  @echo '# edit the last section' >>site.tmp
+?SITE-EXP?	  @echo 'set tool $(DEJATOOL)' >>site.tmp
+?SITE-EXP?	  @echo 'set srcdir $(srcdir)' >>site.tmp
+?SITE-EXP?	  @echo "set objdir `pwd`" >>site.tmp
+?SITE-EXP??BUILD?	@echo 'set build_alias $(build_alias)' >>site.tmp
+?SITE-EXP??BUILD?	@echo 'set build_triplet $(build_triplet)' >>site.tmp
+?SITE-EXP??HOST?	@echo 'set host_alias $(host_alias)' >>site.tmp
+?SITE-EXP??HOST?	@echo 'set host_triplet $(host_triplet)' >>site.tmp
+?SITE-EXP??TARGET?	@echo 'set target_alias $(target_alias)' >>site.tmp
+?SITE-EXP??TARGET?	@echo 'set target_triplet $(target_triplet)' >>site.tmp
+?SITE-EXP?	  @echo '## All variables above are generated by configure. Do Not Edit ##' >>site.tmp
+?SITE-EXP?	  @test ! -f site.exp || \
+?SITE-EXP?	    sed '1,/^## All variables above are.*##/ d' site.exp >> site.tmp
+?SITE-EXP?	  @-rm -f site.bak
+?SITE-EXP?	  @test ! -f site.exp || mv site.exp site.bak
+?SITE-EXP?	  @mv site.tmp site.exp
