@@ -27,6 +27,7 @@ cd ./testSubDir
 # Build appropriate environment in test directory.  Eg create
 # configure.in, touch all necessary files, etc.
 cat > configure.in << 'END'
+AC_INIT
 AM_INIT_AUTOMAKE(nonesuch, nonesuch)
 PACKAGE=nonesuch
 VERSION=nonesuch
