@@ -13,4 +13,5 @@ END
 
 $AUTOMAKE || exit 1
 
-grep '^check-TESTS' Makefile.in && grep '^check-DEJAGNU' Makefile.in
+grep '^check-TESTS' Makefile.in
+grep '^check-DEJAGNU' Makefile.in
