@@ -1,5 +1,13 @@
 2001-02-21  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&handle_tests_dejagnu): Move the definition of a
+	default `site.exp' into...
+	* dejagnu.am (site.exp): here.
+	Use DOS compliant file names.
+
+	
+2001-02-21  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&dist_cmp): New.
 	(&handle_dist): Use it.
 	Promote `my' over `local'.
